fix: small mobile UI fixes
Squashed commit of the following:

commit 5d51e8c5c8a36bcde52682d3ac5584d3d74f1c60
Author: Benoît Latinier <benoit@latinier.fr>
Date:   Thu Aug 31 23:45:02 2017 +0200

    fix: inputs too wide

commit a86e690769485c12757dac6453f3252a73273030
Author: Benoît Latinier <benoit@latinier.fr>
Date:   Thu Aug 31 22:47:52 2017 +0200

    fix mobile glitches

--- a/pigeon/static/css/weights.css
+++ b/pigeon/static/css/weights.css
@@ -50,6 +50,7 @@ body {
 .green { color: #0f0; }
 .red { color: #f00; }
 
+.full-width { width: 100%; }
 .product_img_big {
   margin: auto;
   overflow: hidden;
